  on selection of just one variable plus the constant
- Graph control dialog: add one-click option to force use of a
  single y axis
- New: in case of AR(1) estimation (Cochrane-Orcutt and similar), if
  a lagged dependent variable is included then we automatically
  use the procedure set out in Ramanathan, 5e, p. 450, to generate
  consistent estimates of the standard errors

01/28/2005 version 1.3.2
- Fix bug in auto-determination of lag in ADF test: was looking
  at the wrong coefficient in some cases
- Fix bug in VAR impulse responses: could get messed up by
  missing values that differ across series
- Fix bug: crash on generating LaTeX tabular output for a model
  estimated using robust standard errors (format string issue)
- Fix bug: the session "graph page" was not appearing even when
  a valid latex executable was available
- Fix bug: gretl console would not respond in case of an error when
  executing a command loop
- Fix bug: the "restrict" command failed in the GUI program when
  not applied to a named equation system
- Fix bug: printing "-inf" for AIC and BIC in case of a perfect
  linear fit
- Fix various issues in relaton to nested loops (for example, where 
  the control variable for a given loop is not yet defined at compile
  time, but will be defined in an embedding loop)  
- Fix sort-of bug: possible runaway generation of graphs in response
  to some loop commands
- Improve efficiency of test for existence of helper programs on
  Linux/unix
- Add auto-lag option to the GUI dialog box for the ADF test
- Remember the options selected in the ADF dialog from one invocation
  to the next
- Help files: include menu-path information in the GUI help file as
  well as the script commands help
- Provide a mechanism for retrieving the value and/or p-value from
  the last statistical test performed (via the special variables
  "$test" and "$pvalue" in genr)
- Perfect collinearity: try to detect this, and remove one or more