@@ -17,6 +17,8 @@ version 1.3.3
   a lagged dependent variable is included then we automatically
   use the procedure set out in Ramanathan, 5e, p. 450, to generate
   consistent estimates of the standard errors
+- Fix: gui menu items for test of equality of means, with equal
+  or unequal variances: these were hooked up in reverse
 
 01/28/2005 version 1.3.2
 - Fix bug in auto-determination of lag in ADF test: was looking
